fix(ui): clarified select input padding to not overlap chevron (#245)

--- a/app/assets/stylesheets/src/shared/_components.scss
+++ b/app/assets/stylesheets/src/shared/_components.scss
@@ -109,6 +109,10 @@
     --tblr-btn-padding-y: 4px;
   }
 
+  --sc_chevron_padding: 8px;
+  // Chevron rotation is 45deg, so the actual size is 1.41 times bigger.
+  --sc_input_right_padding: calc(var(--sc_chevron_size) * 1.41 + var(--sc_chevron_padding));
+
   // Imitate tabler dropdown toggle icon.
   &.with-chevron .selectize-input:after {
     border-color: unset !important;
@@ -119,9 +123,10 @@
     transform: rotate(-45deg) translateY(-50%);
     border-width: 1px !important;
 
-    margin-top: calc(var(--select_component_chevron_size) / -2) !important;
-    width: var(--select_component_chevron_size) !important;
-    height: var(--select_component_chevron_size) !important;
+    margin-top: calc(var(--sc_chevron_size) / -2) !important;
+    width: var(--sc_chevron_size) !important;
+    height: var(--sc_chevron_size) !important;
+    right: var(--sc_chevron_padding);
   }
 
   .selectize-input {
@@ -168,41 +173,53 @@
 
   // Start of sizes.
   &.tiny {
-    --select_component_font_size: 12px;
-    --select_component_min_height: 28px;
-    --select_component_chevron_size: 0.4em;
-    --select_component_check_size: 0.7em;
+    --sc_font_size: 12px;
+    --sc_min_height: 28px;
+    --sc_chevron_size: 0.4em;
+    --sc_check_size: 0.7em;
+
+    &.with-chevron .selectize-input {
+      padding: 4px var(--sc_input_right_padding) 4px 8px !important;
+    }
 
     .selectize-input {
-      min-height: var(--select_component_min_height) !important;
+      min-height: var(--sc_min_height) !important;
       padding: 4px 8px !important;
-      font-size: var(--select_component_font_size);
+      font-size: var(--sc_font_size);
     }
   }
 
   &.small {
-    --select_component_font_size: 14px;
-    --select_component_min_height: 32px;
-    --select_component_chevron_size: 0.5em;
-    --select_component_check_size: 0.8em;
+    --sc_font_size: 14px;
+    --sc_min_height: 32px;
+    --sc_chevron_size: 0.5em;
+    --sc_check_size: 0.8em;
+
+    &.with-chevron .selectize-input {
+      padding: 4.5px var(--sc_input_right_padding) 4.5px 9px !important;
+    }
 
     .selectize-input {
-      min-height: var(--select_component_min_height) !important;
+      min-height: var(--sc_min_height) !important;
       padding: 4.5px 9px !important;
-      font-size: var(--select_component_font_size);
+      font-size: var(--sc_font_size);
     }
   }
 
   &.medium {
-    --select_component_font_size: 16px;
-    --select_component_min_height: 40px;
-    --select_component_chevron_size: 0.7em;
-    --select_component_check_size: 0.9em;
+    --sc_font_size: 16px;
+    --sc_min_height: 40px;
+    --sc_chevron_size: 0.7em;
+    --sc_check_size: 0.9em;
+
+    &.with-chevron .selectize-input {
+      padding: 7px var(--sc_input_right_padding) 7px 14px !important;
+    }
 
     .selectize-input {
-      min-height: var(--select_component_min_height) !important;
+      min-height: var(--sc_min_height) !important;
       padding: 7px 14px !important;
-      font-size: var(--select_component_font_size);
+      font-size: var(--sc_font_size);
     }
   }
   // End of sizes.
@@ -254,8 +271,8 @@
       transform: rotate(-45deg) translateY(-50%);
       border-width: 1px;
 
-      width: var(--select_component_check_size);
-      height: calc(var(--select_component_check_size) / 1.7);
+      width: var(--sc_check_size);
+      height: calc(var(--sc_check_size) / 1.7);
     }
   }
 
@@ -326,7 +343,7 @@
   .option {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    font-size: var(--select_component_font_size);
+    font-size: var(--sc_font_size);
 
     &.active[data-selectable] {
       background-color: rgba(var(--tblr-gray-500-rgb), 0.08);
